--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" 
     rel="stylesheet"
     />
-    <link rel="stylesheet" href="/assets/style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -94,7 +94,7 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="/assets/javascript.js"></script>
+    <script src="./assets/javascript.js"></script>
   </body>
 
 </html>
